eflow-phisym/eflow-phisym-10806188-0.err
  File "/eos/home-p/pbackes/gitlab/ecalphisym/calibration/eflow_processor.py", line 48
    fill = args.try:
                ^
SyntaxError: invalid syntax
